<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <Button
        android:layout_weight="1"
        android:id="@+id/button_shop"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/shop" />

    <Button
        android:layout_weight="1"
        android:id="@+id/button_aka"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/aka" />

    <Button
        android:layout_weight="1"
        android:id="@+id/button_show_maps"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/show_maps" />

</LinearLayout>