<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/cafe_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />
    <TextView
        android:id="@+id/contact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contact"
        />
    <TextView
        android:id="@+id/time_open"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time_open"
        />
    <TextView
        android:id="@+id/time_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time_close"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/line"/>
</LinearLayout>